# file-verse

./: CMakeLists.txt  README.md  default.uconf
documentation/: design_choices.md  fifo_workflow.md  file_io_strategy.md  user_guide.md
myenv/: pyvenv.cfg
source/core/: config_parser.cpp  config_parser.hpp  fifo_queue.cpp  fifo_queue.hpp  ofs_api.cpp  ofs_api.hpp  ofs_instance.hpp
source/data_structures/: child_avl_tree.cpp  child_avl_tree.hpp  free_space_bitmap.cpp  free_space_bitmap.hpp  fs_tree.hpp  user_avl_tree.cpp  user_avl_tree.hpp
source/include/: odf_types.hpp
source/server/: main.cpp  ofs_server.cpp  ofs_server.hpp
source/ui/: ofs_gui.py
